--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,6 +52,8 @@
         "ssd1306.h": "c",
         "binary_info.h": "c",
         "stdio.h": "c",
-        "i2c.h": "c"
+        "i2c.h": "c",
+        "wifi.h": "c",
+        "cyw43_arch.h": "c"
     }
 }
